<resources>
    <string name="app_name">Compleniente</string>
    <string name="terms_and_condition">Continuando, accetti i <u>Termini di servizio</u> e l\'<u>Informativa sulla privacy</u></string>
    <string name="already_have_account_login">Hai già un account? <font color="#F3A323"><b>Accedi</b></font></string>
    <string name="hello_blank_fragment">Ciao frammento vuoto</string>
    <string name="lorem15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolores harum iste maxime placeat, quibusdam.</string>
    <string name="login">Accedi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="add_up_to_5_pictures">Aggiungi fino a 5 immagini</string>
    <string name="add_image">Aggiungi immagine</string>
    <string name="task_name">Nome del compito</string>
    <string name="task_description">Descrizione del compito</string>
    <string name="add_task">Aggiungi compito</string>
    <string name="profile">Profilo</string>
    <string name="home">Casa</string>
    <string name="messages">Messaggi</string>
    <string name="events">Eventi</string>
    <string name="month_00">Mese 00</string>
    <string name="event_name">Nome dell\'evento</string>
    <string name="location">Posizione</string>
    <string name="recurrence">Ricorrenza :</string>
    <string name="single">Singolo</string>
    <string name="weekly">Settimanale</string>
    <string name="monthly">Mensile</string>
    <string name="semi_annual">Semestrale</string>
    <string name="annual">Annuale</string>
    <string name="with">Con :</string>
    <string name="start">Inizio</string>
    <string name="name">Nome</string>
    <string name="username">Nome utente</string>
    <string name="date_of_birth">Data di nascita</string>
    <string name="day">Giorno</string>
    <string name="month">Mese</string>
    <string name="year">Anno</string>
    <string name="bio">Biografia</string>
    <string name="update_account">Aggiorna account</string>
    <string name="list_of_users_you_can_interact_with">Elenco degli utenti con cui puoi interagire</string>
    <string name="search_by_username">Cerca per nome utente</string>
    <string name="account">Account</string>
    <string name="edit_profile">Modifica profilo</string>
    <string name="legal">Legale</string>
    <string name="terms_amp_services">Termini &amp; Servizi</string>
    <string name="privacy_policy">Informativa sulla privacy</string>
    <string name="log_out">Esci</string>
    <string name="username_only_contain_letters">Il nome utente può contenere solo lettere &amp; (. , _)</string>
    <string name="full_name">Nome completo</string>
    <string name="create_account">Creare un account</string>
    <string name="don_t_forget_your_compliant">Non dimenticare la tua Conformità</string>
    <string name="sign_up">Iscriviti</string>
    <string name="log_in">Accedi</string>
    <string name="invite">Invita</string>
    <string name="send_message">Invia messaggio</string>
    <string name="nothing_found">Nessun risultato trovato</string>
    <string name="chat_list">Elenco chat</string>
    <string name="no_chat_yet">Ancora nessuna chat</string>
    <string name="capture_share_relive">Cattura, Condividi, Rivivi!</string>
    <string name="new_event">Nuovo evento</string>
    <string name="e_mail_username">Nome utente</string>
    <string name="create_event">Crea evento</string>
    <string name="upcoming_events">Eventi futuri</string>
    <string name="task_requests">Richieste di compito</string>
    <string name="this_month">Questo mese</string>
    <string name="settings">Impostazioni</string>
    <string name="please_wait">Attendere prego</string>
    <string name="camera">Fotocamera</string>
    <string name="gallery">Galleria</string>
    <string name="create">Crea</string>
    <string name="status">Stato :</string>
    <string name="pending">In sospeso</string>
    <string name="task_request_from">Richiesta di compito da</string>
    <string name="date">Data</string>
    <string name="end_reject">Fine/Rifiuta</string>
    <string name="accept">Accetta</string>
    <string name="select_user">Seleziona utente</string>
    <string name="edit_photo">Modifica foto</string>
    <string name="cancel">Annulla</string>
    <string name="remove">Rimuovi</string>
    <string name="upload_image">Carica immagine</string>
    <string name="upload_video">Carica video</string>
    <string name="confirm">Conferma</string>
    <string name="uploading">Caricamento...</string>
    <string name="you_can_only_chat_on_the_day_the_task_is_assigned">Puoi chattare solo il giorno in cui viene assegnato il compito</string>
    <string name="verify_your_email">Verifica la tua email</string>
    <string name="to_ensure_the_security_of_your_account_and_access_to_our_awesome_features_we_need_to_verify_your_email_address">Per garantire la sicurezza del tuo account e l\'accesso alle nostre fantastiche funzionalità, dobbiamo verificare il tuo indirizzo email</string>
    <string name="didn_t_receive_verification_email">Non hai ricevuto l\'email di verifica??</string>
    <string name="please_click_on_the_verification_link_we_ve_sent_to_your_inbox">Fai clic sul link di verifica che abbiamo inviato alla tua casella di posta</string>
    <string name="forgot_your_password">Hai dimenticato la tua password??</string>
    <string name="tel_us_your_email_we_will_send_you_a_password_resent_link">Dicci la tua email e ti invieremo un link per reimpostare la password</string>
    <string name="reset_password">Reimposta password</string>
    <string name="participants">Partecipanti</string>
    <string name="add_media">Aggiungi media</string>
    <string name="good_morning">Buongiorno</string>
    <string name="good_afternoon">Buon pomeriggio</string>
    <string name="good_evening">Buonasera</string>
    <string name="good_night">Buonanotte</string>
    <string name="stating_in_few_minutes">Inizio tra pochi minuti</string>
    <string name="the_event_is_stating_in_15_minutes_prepare_yourself_for_the_best_experience">L\'evento inizia tra 15 minuti, preparati per la migliore esperienza.</string>
    <string name="is_started">" è iniziato"</string>
    <string name="did_you_miss_the_event_hurry_up_and_participate_the_event_and_don_t_forgot_to_capture_share_relive">Hai perso l\'evento 😕. Sbrigati e partecipa all\'evento e non dimenticare di catturare, condividere e rivivere</string>
    <string name="user_name_is_empty">Il nome utente è vuoto</string>
    <string name="you_can_t_create_event_with_your_self">Non puoi creare un evento da solo</string>
    <string name="user_not_found">Utente non trovato</string>
    <string name="user_data_not_found">Dati utente non trovati</string>
    <string name="dismiss">Ignora</string>
    <string name="reject_delete">Rifiuta/Elimina</string>
    <string name="end_task">Fine compito</string>
    <string name="accepted">Accettato</string>
    <string name="rejected">Rifiutato</string>
    <string name="password_reset">Reset password</string>
    <string name="a_password_reset_mail_is_sent_to_your_email_address">È stata inviata una mail di reset password al tuo indirizzo email</string>
    <string name="email_is_empty">L\'email è vuota</string>
    <string name="email_is_not_valid">L\'email non è valida</string>
    <string name="password_is_empty">La password è vuota</string>
    <string name="user_is_not_available_for_today">L\'utente non è disponibile oggi</string>
    <string name="this_user_already_selected">Questo utente è già stato selezionato!</string>
    <string name="a_request_is_send_to_all_users">È stata inviata una richiesta a tutti gli utenti</string>
    <string name="add_event_image">Aggiungi immagine dell\'evento</string>
    <string name="name_is_empty">Il nome è vuoto</string>
    <string name="location_is_empty">La posizione è vuota</string>
    <string name="select_recurrence">Seleziona ricorrenza</string>
    <string name="select_time">Seleziona ora</string>
    <string name="add">Aggiungi</string>
    <string name="profile_updated">Profilo aggiornato</string>
    <string name="no_image_is_selected">Nessuna immagine selezionata</string>
    <string name="select_users">Seleziona utenti</string>
    <string name="logout">Esci</string>
    <string name="are_you_sure_you_want_to_logout">Sei sicuro di voler uscire?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="username_is_not_available">Il nome utente non è disponibile</string>
    <string name="date_is_not_valid">La data non è valida</string>
    <string name="friend_profile">Profilo dell\'amico</string>
    <string name="media_is_loading">Caricamento media...</string>
    <string name="add_tasks">Aggiungi compiti</string>
    <string name="required_number_of_images_are_selected">Il numero richiesto di immagini è stato selezionato</string>
    <string name="please_select_multiple_images">Seleziona più immagini</string>
    <string name="please_select_multiple_videos">Seleziona più video</string>
    <string name="email_verified">Email verificata</string>
    <string name="event">Evento</string>
    <string name="required_number_of_medias_are_selected">Il numero richiesto di media è stato selezionato</string>
    <string name="waiting_for_acceptance">In attesa di accettazione</string>

</resources>