<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/newUI">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/event" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/black_trans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginEnd="12dp">

                    <TextView
                        android:id="@+id/greeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="Welcome"/>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Suleman Ijaz"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/stroke"
                    android:src="@drawable/profile_icon" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/capture_share_relive"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_event"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/e_mail_username"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/create_event"
            app:elevation="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="10dp"
            app:backgroundTint="@color/orange"
            app:cornerRadius="12dp"
            app:iconTint="@color/black"
            app:strokeWidth="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_events"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/task_request_card"
            android:visibility="gone"
            android:layout_below="@id/title" />

        <LinearLayout
            android:id="@+id/noItemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/curious_rafiki" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_below="@id/title"
                android:text="@string/nothing_found"/>

        </LinearLayout>


    </LinearLayout>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:visibility="gone"
        android:background="@color/grey">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0dp"
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/stroke"
                    android:src="@drawable/profile_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:id="@+id/greeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Good Morning"/>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Suleman Ijaz"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/calenderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0dp"
            app:cardElevation="0dp"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:layout_below="@id/calenderView"
                    android:text="September"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendarRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:padding="8dp"
                    android:scrollbars="none" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/calenderView"
            android:text="This Month Tasks"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/task_request_card"
            android:visibility="gone"
            android:layout_below="@id/title" />

        <LinearLayout
            android:id="@+id/noItemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/curious_rafiki" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_below="@id/title"
                android:text="Nothing Found"/>

        </LinearLayout>

    </RelativeLayout>-->

</androidx.core.widget.NestedScrollView>